# vdl

./: .gitignore  LICENSE  README.md  pyproject.toml
vdl/: __main__.py  model.py
vdl/themes/: dark.qss
vdl/view/: main_widget.py
